fix: add word wrap property

--- a/src/input.css
+++ b/src/input.css
@@ -133,6 +133,7 @@ footer a:hover {
 	gap: 16px;
 	font-size: 28px;
 	line-height: 40px;
+	word-wrap: break-word;
 }
 .article span {
 	min-width: 35px;
